# container-rack-web

./: CNAME  Cargo.toml  README.md  index.html  index.scss
.github/workflows/: deploy.yml
assets/styles/: index.scss
src/: lib.rs  main.rs
src/pages/: containers.rs  mod.rs
