[package]
name = "smartstore-box-organizer-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.8", features = ["csr"] }
leptos_router = { version = "0.6.9", features = ["csr"]}
log = "0.4.21"
smartstore_box_organizer_generator = { git = "https://github.com/hasanen/smartstore-box-organizer-generator.git" }
